# gpgpu

./: .gitignore  README.md
cpu/atlas/: Makefile
cpu/intel_mkl/: Makefile  sgemm.c  sgemv.c
cpu/openblas/: Makefile  sgemm.c  sgemv.c  sgemv1.c  test_sgemv.sh
cpu/tx1/cpu_blas/: install_openblas.txt
cublas/: cublas_main.cu
cuda/build_shared_lib/: Makefile  gen_shared.sh  kernel_a.cu  kernel_b.cu  kernels.h  main.cu
cuda/constant_and_texture_memory/: Makefile  main.cu  tex3d.cu
cuda/copy_engine/: readme.md
cuda/cuda7_stream/: .Makefile.swp  .test.cu.swp  Makefile  readme.md  test.cu
cuda/cudaevent/: Makefile  event_ptx.cu  readme.md
cuda/deviceQuery/: Makefile  main.cu
cuda/dynamic_parallelism/: Makefile  factorial.cu
cuda/kepler_assembler/test/: compile.sh  kernel2cubin.sh  test  test.cpp  test.cu  test.cu_v1  test.cubin
cuda/kepler_assembler/vectorAddDrv/: Makefile  vectorAddDrv
cuda/matrix_vector/: Makefile  clean.sh  cublas_main.cu  cuda_main.cu  cuda_wtime.cu  log  magma_main.cu  wtime.c
cuda/matrix_vector/009/: cuda_main  cuda_main.cu
cuda/matrix_vector/010/: Makefile  cuda_main  cuda_main.cpp1.ii  cuda_main.cpp2.i  cuda_main.cpp3.i  cuda_main.cpp4.ii  cuda_main.cu  cuda_main.cu.cpp.ii  cuda_main.cubin  cuda_main.cudafe1.c  cuda_main.cudafe1.cpp  cuda_main.cudafe1.gpu  cuda_main.cudafe1.stub.c  cuda_main.cudafe2.gpu  cuda_main.fatbin  cuda_main.fatbin.c  cuda_main.hash  cuda_main.module_id  cuda_main.ptx  log  (+2 more)
cuda/sharedmemory/: Makefile  cudalean.sh  shared_test.cu
cuda/thrust/: Makefile  sort_by_key.cu
cuda/transfer/: Makefile  main.cu
cuda/unified_memory/: 1_test.cu  2_test_um.cu  3_test_um_c++.cu  4_test_um_c++.cu  Makefile  readme.md
cuda/useful_nuggets/: cuda_io.cu  sgemv.cu
cuda/warp_barrier/: Makefile  warp_bar.cu
magma/: install.md  resource
magma/exe01/: Makefile  isamax.cpp
magma/exe02/: Makefile  lu.cpp
magma/report/: bigdata_magma_perf.ods  ml.odt
opencl/nested_parallelism/: CMakeLists.txt  dp.cpp  readme.md
opencl/svm/: CMakeLists.txt  clean.sh
tegra/zero-copy/: Makefile  test.sh  zp.cu
tricks/ker2lib/: readme
tricks/ker2lib/cmake_gtest/: CMakeLists.txt  kernel.h
tricks/ker2lib/cmake_gtest/unit_test/: CMakeLists.txt  example_test.cu
tricks/ker2lib/cmake_gtest/unit_test/gmock/gmock-1.7.0/: CTestTestfile.cmake  Makefile
tricks/ker2lib/cmake_gtest/unit_test/gmock/gmock-1.7.0/gtest/: CTestTestfile.cmake  Makefile
(+199 files in other folders)
